# fuzzy-giggle

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  USER_MANUAL.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: client.ts
frontend/src/components/: AdminLayout.vue  UserLayout.vue
frontend/src/router/: index.ts
frontend/src/views/admin/: Documents.vue  Entities.vue  Home.vue  Settings.vue
frontend/src/views/user/: Document.vue  Home.vue  Scrape.vue  Search.vue
knowledge_server/: __init__.py  __main__.py  config.py
knowledge_server/api/: __init__.py  server.py
knowledge_server/graph_db/: __init__.py  graph_store.py
knowledge_server/rag/: __init__.py  rag_engine.py  reranker.py
knowledge_server/scrapy_server/: __init__.py  runner.py  spider.py
knowledge_server/vector_db/: __init__.py  vector_store.py
tests/: __init__.py  test_api_server.py  test_graph_store.py  test_rag_engine.py  test_vector_store.py
